<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/modulechit_style"
    android:layout_height="match_parent"
    tools:context=".screens.mod.FragmentMod">

    <EditText
        android:id="@+id/editTextNumberA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:ems="5"
        android:hint="@string/num1"
        android:textSize="20sp"
        android:inputType="number"
        style="@style/Theme.ModulChit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumberB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:ems="5"
        android:textSize="20sp"
        android:hint="@string/num2"
        android:inputType="number"
        style="@style/Theme.ModulChit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/mod"
        style="@style/Theme.ModulChit"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMod"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberB"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberA"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberB" />

    <TextView
        android:id="@+id/textViewResultMod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="0"
        style="@style/Theme.ModulChit"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMod" />
</androidx.constraintlayout.widget.ConstraintLayout>