<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.fe.explfe.FragmentFEexpl">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/startTextFE"
            style="@style/theme_chit"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/entering_values_into_the_form_base_4_degree_13_mod_497"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fe_5"
            app:layout_constraintTop_toBottomOf="@+id/startTextFE"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/explTextFE1"
            style="@style/theme_chit"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/values_are_written_to_the_table_a_4_m_13_n_497_p_a_4_r_m_mod_2_13_mod_2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fe_1"
            app:layout_constraintTop_toBottomOf="@+id/explTextFE1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/explTextFE2"
            style="@style/theme_chit"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/in_the_next_line_the_values_are_recalculated_if_r_0_then_p_is_the_value_of_a_from_the_previous_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView1"
            />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fe_2"
            app:layout_constraintTop_toBottomOf="@+id/explTextFE2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/explTextFE3"
            style="@style/theme_chit"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/if_r_1_then_p_p_from_the_previous_line_a_mod_n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fe_3"
            app:layout_constraintTop_toBottomOf="@+id/explTextFE3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/explTextFE4"
            style="@style/theme_chit"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/repeat_the_algorithm_until_m_is_equal_to_1_and_the_result_is_p_445"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fe_4"
            app:layout_constraintTop_toBottomOf="@+id/explTextFE4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>