<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/modulechit_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    tools:context=".screens.fe.FragmentFE">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="0.5"
                app:counterEnabled="true"
                app:counterMaxLength="5"
                app:helperText="@string/base_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNumberAFe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="a"
                    android:inputType="number"
                    android:maxLength="5" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="0.5"
                app:counterEnabled="true"
                app:counterMaxLength="5"
                app:helperText="@string/degree">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNumberMFe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="m"
                    android:inputType="number"
                    android:maxLength="5" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="0.5"
                app:counterEnabled="true"
                app:counterMaxLength="5"
                app:helperText="@string/module">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNumberNFe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="n"
                    android:inputType="number"
                    android:maxLength="5" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/buttonFE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <include
            android:id="@+id/includeFE"
            layout="@layout/item_fe_tite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonFE" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mRecyclerFE"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8sp"
            android:layout_marginEnd="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/includeFE" />

        <TextView
            android:id="@+id/resultFE"
            style="@style/Theme.ModulChit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mRecyclerFE" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>